chore: Engine 0.8.0 certified
Memory leaks derived by MQTT monitoring has been solved