@@ -18,15 +18,14 @@
 package it.unibo.arces.wot.sepa.engine.core;
 
 import java.io.IOException;
+import java.net.URISyntaxException;
 import java.security.InvalidKeyException;
 import java.security.KeyManagementException;
 import java.security.KeyStoreException;
 import java.security.NoSuchAlgorithmException;
 import java.security.UnrecoverableKeyException;
 import java.security.cert.CertificateException;
-import java.util.Date;
 import java.util.NoSuchElementException;
-import java.util.logging.Level;
 import java.util.regex.PatternSyntaxException;
 
 import javax.crypto.BadPaddingException;
@@ -42,15 +41,12 @@ import org.apache.logging.log4j.Logger;
 
 import com.nimbusds.jose.JOSEException;
 
-import it.unibo.arces.wot.sepa.commons.protocol.SPARQL11Properties;
-
+import it.unibo.arces.wot.sepa.engine.bean.EngineBeans;
 import it.unibo.arces.wot.sepa.engine.bean.SEPABeans;
 
-import it.unibo.arces.wot.sepa.engine.processing.Processor;
-
-import it.unibo.arces.wot.sepa.engine.protocol.http.HttpServer;
-import it.unibo.arces.wot.sepa.engine.protocol.http.HttpsServer;
 import it.unibo.arces.wot.sepa.engine.protocol.websocket.WebsocketServer;
+import it.unibo.arces.wot.sepa.engine.protocol.http.HttpGate;
+import it.unibo.arces.wot.sepa.engine.protocol.http.HttpsGate;
 import it.unibo.arces.wot.sepa.engine.protocol.websocket.SecureWebsocketServer;
 
 import it.unibo.arces.wot.sepa.engine.scheduling.Scheduler;
@@ -62,49 +58,47 @@ import it.unibo.arces.wot.sepa.engine.security.AuthorizationManager;
  * Event Processing Architecture (SEPA)
  * 
  * @author Luca Roffia (luca.roffia@unibo.it)
- * @version 0.6
+ * @version 0.7.7
  */
 
 public class Engine extends Thread implements EngineMBean {
 	// Properties, logging
 	private static final Logger logger = LogManager.getLogger("Engine");
-	private static final int wsShutdownTimeout = 5000;
-	private EngineProperties engineProperties = null;
-	private SPARQL11Properties endpointProperties = null;
-
-	// JMX properties
-	private static Date startDate;
 
 	// Primitives scheduler/dispatcher
 	private Scheduler scheduler = null;
-
-	// Primitives processor
-	private Processor processor = null;
-
+	private Thread schedulerThread = null;
+	
 	// SPARQL 1.1 Protocol handler
-	private HttpServer httpGate = null;
-	private Thread httpGateThread = null;
+	private HttpGate httpGate = null;
 
 	// SPARQL 1.1 SE Protocol handler
 	private WebsocketServer wsServer;
 	private SecureWebsocketServer wssServer;
-	private HttpsServer httpsGate = null;
-	private Thread httpsGateThread = null;
+	private HttpsGate httpsGate = null;
+	private static final int wsShutdownTimeout = 5000;
 
 	// Outh 2.0 Authorization Server
 	private static AuthorizationManager oauth;
+	
+	// JKS Credentials 
 	private static String storeName = "sepa.jks";
 	private static String storePassword = "sepa2017";
 	private static String jwtAlias = "sepakey";
 	private static String jwtPassword = "sepa2017";
 	private static String serverCertificate = "sepacert";
 
+	// JMX
+	private static EngineBeans jmx;
+	
 	private static void printUsage() {
 		System.out.println("Usage:");
-		System.out.println("java [JMX] -jar sepa-engine.jar [OPTIONS]");
+		System.out.println("java [JMX] [JVM] -jar SEPAEngine_X.Y.Z.jar [OPTIONS]");
 		System.out.println("");
 		System.out.println("JMX:");
 		System.out.println("-Dcom.sun.management.config.file=jmx.properties : to enable JMX remote managment");
+		System.out.println("JVM:");
+		System.out.println("-Xmx500m -Xms500m -Xmn250m -XX:+UseConcMarkSweepGC -XX:ParallelCMSThreads=2");
 		System.out.println("OPTIONS:");
 		System.out.println("-help : to print this help");
 		System.out.println("-storename=<name> : file name of the JKS     (default: sepa.jks)");
@@ -112,7 +106,6 @@ public class Engine extends Thread implements EngineMBean {
 		System.out.println("-alias=<jwt> : alias for the JWT key      	 (default: sepakey)");
 		System.out.println("-aliaspwd=<pwd> : password of the JWT key    (default: sepa2017)");
 		System.out.println("-certificate=<crt> : name of the certificate (default: sepacert)");
-
 	}
 
 	private static void parsingArgument(String[] args) throws PatternSyntaxException {
@@ -147,14 +140,11 @@ public class Engine extends Thread implements EngineMBean {
 		}
 	}
 
-	public static void main(String[] args) {
-		// Set Grizzly logging level
-		java.util.logging.Logger grizzlyNetworkListener = java.util.logging.Logger
-				.getLogger("org.glassfish.grizzly.http.server.NetworkListener");
-		java.util.logging.Logger grizzlyHttpServer = java.util.logging.Logger
-				.getLogger("org.glassfish.grizzly.http.server.HttpServer");
-		grizzlyNetworkListener.setLevel(Level.SEVERE);
-		grizzlyHttpServer.setLevel(Level.SEVERE);
+	public static void main(String[] args) throws MalformedObjectNameException, InstanceAlreadyExistsException,
+			MBeanRegistrationException, NotCompliantMBeanException, UnrecoverableKeyException, KeyManagementException,
+			InvalidKeyException, KeyStoreException, NoSuchAlgorithmException, CertificateException,
+			IllegalArgumentException, NoSuchElementException, NullPointerException, ClassCastException,
+			NoSuchPaddingException, IllegalBlockSizeException, BadPaddingException, IOException, URISyntaxException {
 
 		// Command arguments
 		parsingArgument(args);
@@ -162,7 +152,7 @@ public class Engine extends Thread implements EngineMBean {
 		System.out
 				.println("##########################################################################################");
 		System.out
-				.println("# SEPA Engine Ver 0.7.6  Copyright (C) 2016-2017                                         #");
+				.println("# SEPA Engine Ver 0.7.7  Copyright (C) 2016-2017                                         #");
 		System.out
 				.println("# Web of Things Research @ ARCES - University of Bologna (Italy)                         #");
 		System.out
@@ -184,21 +174,6 @@ public class Engine extends Thread implements EngineMBean {
 		System.out
 				.println("##########################################################################################");
 		System.out.println("");
-		System.out
-				.println("--------------------------------- Maven dependencies -------------------------------------");
-		System.out.println("<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpcore-nio -->"
-				+ "\n<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpcore -->"
-
-				+ "\n<!-- https://mvnrepository.com/artifact/org.java-websocket/Java-WebSocket -->"
-
-				+ "\n<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->"
-				+ "\n<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->"
-
-				+ "\n<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->"
-
-				+ "\n<!-- https://mvnrepository.com/artifact/com.nimbusds/nimbus-jose-jwt -->"
-
-				+ "\n<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->");
 
 		// Engine creation and initialization
 		Engine engine = new Engine();
@@ -213,137 +188,149 @@ public class Engine extends Thread implements EngineMBean {
 		}
 
 		// Initialize
-		try {
-			if (!engine.init())
-				System.exit(1);
-		} catch (MalformedObjectNameException | InstanceAlreadyExistsException | MBeanRegistrationException
-				| NotCompliantMBeanException | UnrecoverableKeyException | KeyManagementException
-				| IllegalArgumentException | NoSuchElementException | KeyStoreException | NoSuchAlgorithmException
-				| CertificateException | IOException | NullPointerException | ClassCastException e) {
-			logger.fatal(e.getMessage());
-			System.exit(1);
-		}
+		engine.init();
 
 		// Starting main engine thread
 		engine.start();
-
-		// Welcome message
-		System.out.println("");
-		System.out.println("*****************************************************************************************");
-		System.out.println("*                      SEPA Engine Ver 0.7.6 is up and running                          *");
-		System.out.println("*                                 Let Things Talk                                       *");
-		System.out.println("*****************************************************************************************");
 
 		// Attach CTRL+C hook
 		Runtime.getRuntime().addShutdownHook(new EngineShutdownHook(engine));
 	}
 
 	public Engine() {
-		SEPABeans.registerMBean("SEPA:type=Engine", this);
+		SEPABeans.registerMBean("SEPA:type="+this.getClass().getSimpleName(), this);
+		this.setName("SEPA Engine");
 	}
 
-	@Override
-	public void run() {
-		logger.info("Starting...");
-		setName("SEPA Engine");
-		startDate = new Date();
-
-		// Scheduler
-		scheduler.start();
-
-		// SPARQL 1.1 Protocol handler
-		httpGateThread = new Thread(httpGate);
-		httpGateThread.start();
-
-		// SPARQL 1.1 SE Protocol handler
-		httpsGateThread = new Thread(httpsGate);
-		httpsGateThread.start();
-
-		wsServer.start();
-
-		wssServer.start();
-	}
-
-	public void shutdown() {
-		logger.info("Stopping...");
-		
-		logger.info("Stopping scheduler...");
-		scheduler.interrupt();
-		
-		logger.info("Stopping HTTP gate...");
-		httpGate.shutdown();
-		
-		logger.info("Stopping HTTPS gate...");
-		httpsGate.shutdown();
-		
-		try {
-			logger.info("Stopping WS gate...");
-			wsServer.stop(wsShutdownTimeout);
-		} catch (InterruptedException e) {
-			logger.warn(e.getMessage());
-		}
-		try {
-			logger.info("Stopping WSS gate...");
-			wssServer.stop(wsShutdownTimeout);
-		} catch (InterruptedException e) {
-			logger.warn(e.getMessage());
-		}
-	}
-	
 	public boolean init() throws MalformedObjectNameException, InstanceAlreadyExistsException,
 			MBeanRegistrationException, NotCompliantMBeanException, UnrecoverableKeyException, KeyManagementException,
-			KeyStoreException, NoSuchAlgorithmException, CertificateException, IOException {
-		// Initialize SPARQL 1.1 processing service properties
-		boolean propertiesFound = true;
-		try {
-			endpointProperties = new SPARQL11Properties("endpoint.jpar");
-		} catch (NumberFormatException | InvalidKeyException | NoSuchElementException | NullPointerException
-				| ClassCastException | NoSuchAlgorithmException | NoSuchPaddingException | IllegalBlockSizeException
-				| BadPaddingException | IOException e) {
-			logger.warn("Open and modify JPAR file and run again the engine");
-			propertiesFound = false;
-		}
-
+			KeyStoreException, NoSuchAlgorithmException, CertificateException, IOException, InvalidKeyException,
+			IllegalArgumentException, NoSuchElementException, NullPointerException, ClassCastException,
+			NoSuchPaddingException, IllegalBlockSizeException, BadPaddingException, URISyntaxException {
+		
 		// Initialize SPARQL 1.1 SE processing service properties
+		EngineProperties properties;
 		try {
-			engineProperties = new EngineProperties("engine.jpar");
+			properties = new EngineProperties("engine.jpar");
 		} catch (IllegalArgumentException | NoSuchElementException | IOException e) {
 			logger.warn("Open and modify JPAR file and run again the engine");
-			propertiesFound = false;
+			return false;
 		}
 
-		if (!propertiesFound)
-			return false;
-
-		// SPARQL 1.1 SE request processor
-		processor = new Processor(endpointProperties);
-
 		// SPARQL 1.1 SE request scheduler
-		scheduler = new Scheduler(engineProperties, processor);
+		scheduler = new Scheduler(properties);
 
 		// SPARQL 1.1 Protocol
-		System.out
-				.println("---------- SPARQL 1.1 Protocol (https://www.w3.org/TR/sparql11-protocol/)  ---------------");
-		httpGate = new HttpServer(engineProperties, scheduler);
+		httpGate = new HttpGate(properties, scheduler);
 
 		// SPARQL 1.1 SE Protocol
-		System.out.println("");
-		System.out
-				.println("------ SPARQL SE 1.1 Protocol (https://wot.arces.unibo.it/TR/sparql11-se-protocol/)  -----");
-		wsServer = new WebsocketServer(engineProperties.getWsPort(), engineProperties.getSubscribePath(),
-				engineProperties.getKeepAlivePeriod(), scheduler);
+		httpsGate = new HttpsGate(properties, scheduler, oauth);
 
-		httpsGate = new HttpsServer(engineProperties, scheduler, oauth);
+		wsServer = new WebsocketServer(properties.getWsPort(), properties.getSubscribePath(), scheduler,
+				properties.getKeepAlivePeriod());
+		wssServer = new SecureWebsocketServer(properties.getWssPort(),
+				properties.getSecurePath() +properties.getSubscribePath(), scheduler, oauth,
+				properties.getKeepAlivePeriod());
 
-		wssServer = new SecureWebsocketServer(engineProperties.getWssPort(),
-				engineProperties.getSecurePath() + engineProperties.getSubscribePath(),
-				engineProperties.getKeepAlivePeriod(), scheduler, oauth);
-
+		jmx = new EngineBeans(properties);
+		
 		return true;
 	}
 
 	@Override
-	public Date getStartDate() {
-		return startDate;
+	public void run() {
+		// Scheduler
+		schedulerThread =new Thread(scheduler);
+		schedulerThread.setName("SEPA scheduler");
+		schedulerThread.start();
+
+		// Protocol gates
+		System.out.println("SPARQL 1.1 Protocol (https://www.w3.org/TR/sparql11-protocol/)");
+		System.out.println("----------------------");
+		httpGate.start();
+		synchronized(httpGate) {
+			try {
+				httpGate.wait();
+			} catch (InterruptedException e) {
+				logger.warn(e.getMessage());
+			}
+		}
+		
+		System.out.println("----------------------");
+		System.out.println("");
+		System.out.println("SPARQL 1.1 SE Protocol (https://wot.arces.unibo.it/TR/sparql11-se-protocol/)");
+		System.out.println("----------------------");
+		httpsGate.start();
+		synchronized(httpsGate) {
+			try {
+				httpsGate.wait();
+			} catch (InterruptedException e) {
+				logger.warn(e.getMessage());
+			}
+		}
+		
+		wsServer.start();
+		synchronized (wsServer) {
+			try {
+				wsServer.wait();
+			} catch (InterruptedException e) {
+				return;
+			}
+		}
+
+		wssServer.start();
+		synchronized (wssServer) {
+			try {
+				wssServer.wait();
+			} catch (InterruptedException e) {
+				return;
+			}
+		}
+		System.out.println("----------------------");
+		
+		// Welcome message
+		System.out.println("");
+		System.out.println("*****************************************************************************************");
+		System.out.println("*                      SEPA Engine Ver 0.7.7 is up and running                          *");
+		System.out.println("*                                Let Things Talk!                                       *");
+		System.out.println("*****************************************************************************************");
+	}
+
+	public void shutdown() {
+		logger.info("Stopping...");
+
+		logger.info("Stopping scheduler...");
+		schedulerThread.interrupt();
+
+		logger.info("Stopping HTTP gate...");
+		httpGate.interrupt();
+
+		logger.info("Stopping HTTPS gate...");
+		httpsGate.interrupt();
+		
+		 try {
+		 logger.info("Stopping WS gate...");
+		 wsServer.stop(wsShutdownTimeout);
+		 } catch (InterruptedException e) {
+		 logger.warn(e.getMessage());
+		 }
+		 try {
+		 logger.info("Stopping WSS gate...");
+		 wssServer.stop(wsShutdownTimeout);
+		 } catch (InterruptedException e) {
+		 logger.warn(e.getMessage());
+		 }
+
+		logger.info("Stopped...bye bye :-)");
+	}
+
+	@Override
+	public String getUpTime() {
+		return jmx.getUpTime();
+	}
+
+	@Override
+	public String getProperties() {
+		return jmx.getProperties();
 	}
 }
